<?xml version="1.0"?>
<package format="2">
  <name>robotiq_3f_ros_pkg</name>
  <version>1.0.0</version>
  <description>The robotiq 3f gripper wrapper package</description>

  <maintainer email="atsuki.yokota@gmail.com">Atsuki Yokota</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/Nishida-Lab/robotiq_3f_ros_pkg</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robotiq_3f_control</exec_depend>
  <exec_depend>robotiq_3f_description</exec_depend>
  <exec_depend>robotiq_3f_driver</exec_depend>
  <exec_depend>robotiq_3f_gazebo</exec_depend>
  <exec_depend>robotiq_3f_srvs</exec_depend>
  <export>
    <metapackage/>
  </export>
</package>
